[package]
name = "siodb"
version = "0.0.4"
authors = ["Siodb <code@siodb.io>"]
edition = "2018"
description = "Driver for Siodb database."
readme = "README.md"
homepage = "https://siodb.io"
repository = "https://github.com/siodb/siodb-rust-driver"
license = "Apache-2.0"
keywords = ["siodb", "driver", "database"]
categories = ["database"]

[lib]
name = "siodb"
path = "src/lib.rs"

[[bin]]
name = "siodb"
path = "src/main.rs"

[dependencies]
http = "0.2"
openssl = "0.10"
native-tls = "0.2"
protobuf = "2.12"
bufstream = "0.1"
protoc-rust = "2.0"
url = "2.1"
byteorder = "1.3"
chrono = "0.4"
varint = "0.9"
zigzag = "0.1"

